# -skymarket-_app

./: .gitignore  README.md
skymarket/: pyproject.toml
skymarket/ads/: models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py  0002_auto_20230629_0610.py  0002_auto_20230708_2208.py  0003_auto_20230629_0625.py  0003_auto_20230708_2219.py  0004_auto_20230630_0059.py  0005_auto_20230630_0104.py  0006_alter_ad_image.py  0007_alter_comment_ad.py  0008_alter_ad_image.py  0009_alter_ad_image.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  managers.py  models.py  serializers.py  views.py
skymarket/users/migrations/: 0001_initial.py  0002_alter_user_image.py  0003_alter_user_image.py  0004_alter_user_image.py  0005_alter_user_image.py  0006_alter_user_image.py
